# boardgame_helper_api

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
api/: urls.py
apps/core/: admin.py  filters.py  models.py  serializers.py  services.py  views.py
apps/core/migrations/: 0001_initial.py  0002_category_created_at_category_updated_at_and_more.py  0003_file_alter_category_created_at_and_more.py  0004_alter_file_file.py
apps/users/: serializers.py  views.py
config/: asgi.py  settings.py  urls.py
nginx-local/: nginx.conf
